--- a/frontend/src/style/NuevoReporte.css
+++ b/frontend/src/style/NuevoReporte.css
@@ -61,10 +61,34 @@ textarea {
   text-align: center;
 }
 
+.btn-ubicar {
+  background-color: #d4af37;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  padding: 8px 12px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s ease;
+}
+
+.btn-ubicar:hover {
+  background-color: #b4952e;
+}
+
+
 .fila-direccion {
   display: flex;
   gap: 1rem;
   margin-top: 1rem;
+}
+
+.f-direccion {
+  display: flex;
+  align-items: flex-end;
+  gap: 6px;
 }
 
 .fila-direccion div {
@@ -111,4 +135,60 @@ textarea {
   border: 2px solid #90ee90;
   margin-top: 0.5rem;
   border-radius: 8px;
+}
+
+/* Botón de subir archivos */
+.boton-subir {
+  margin: 1rem 0;
+}
+
+.btn-subir {
+  background-color: #d4af37;
+  color: white;
+  padding: 0.6rem 1.2rem;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+  transition: background 0.3s ease;
+}
+
+.btn-subir:hover {
+  background-color: #b4952e;
+}
+
+/* Sección para adjuntar archivos */
+.adjuntar-archivos {
+  margin-top: 2rem;
+  border: 2px dashed #ccc;
+  padding: 10rem;
+  text-align: center;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  position: relative;
+}
+
+.preview-contenedor {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 5fr));
+  gap: 1rem;
+  margin-top: 1.5rem;
+}
+
+.preview-item {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+}
+
+.preview-item img,
+.preview-item video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
